apps/onedayflex-frontend/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onedayflex-front
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - onedayflex.klr.kr
      secretName: onedayflex-klr-kr-tls
  rules:
    - host: onedayflex.klr.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onedayflex-front
                port:
                  number: 3000
